@@ -39,6 +39,8 @@ v0.9.0
     * py2exe:  never bundle the python dll into the bootstrap executable
       unless it was bundled into the frozen app, it caused too many issues
       with unsuspecting third-party libraries.
+    * Add utility functions "really_rename" and "really_rmtree", which retry
+      the operation in response to certain bogus errors on win32.
 
 
 v0.8.5:
